--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,12 @@
 			<artifactId>lombok</artifactId>
 			<version>1.18.16</version>
 		</dependency>
-	</dependencies>
+		<dependency>
+			<groupId>gov.nist.math</groupId>
+			<artifactId>jama</artifactId>
+			<version>1.0.3</version>
+		</dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
